Converter rewritten, Fixed Arkavattu issues, Fixed jna issues and other issues

--- a/web/index.html
+++ b/web/index.html
@@ -81,11 +81,11 @@
     </div>
     <script type="text/javascript" src="jquery-1.5.js"></script>
     <script type="text/javascript" src="map_nudi_baraha.js"></script>
+    <script type="text/javascript" src="helper.js"></script>
     <script type="text/javascript" src="a2u.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
-      var converter = new Ascii2UnicodeConverter();
-      converter.init();
+      converter_init();
       });
     </script>
   </body>
