Added new option of english numbers while converting

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
           <div class="half-sep clear"></div>
           <textarea id="input-box">J®ègÉÆ¼ÀUÉÆAzÁUÀÄ ªÀÄAPÀÄwªÀÄä</textarea>
           <div id="actions-bar">
+            <input type="checkbox" id="english-numbers"/><label for="english-numbers">ಆಂಗ್ಲ ಸಂಖ್ಯೆಗಳು</label> &nbsp;&nbsp;
             <a id="clear-button">clear</a>
             <a id="convert-button">convert</a>
           </div>
@@ -80,9 +81,9 @@
       <div class="clear" style="height:500px;"> </div>
     </div>
     <script type="text/javascript" src="jquery-1.5.js"></script>
-    <script type="text/javascript" src="map_nudi_baraha.js?v=2"></script>
-    <script type="text/javascript" src="helper.js?v=2"></script>
-    <script type="text/javascript" src="a2u.js?v=2"></script>
+    <script type="text/javascript" src="map_nudi_baraha.js?v=3"></script>
+    <script type="text/javascript" src="helper.js?v=3"></script>
+    <script type="text/javascript" src="a2u.js?v=4"></script>
     <script type="text/javascript">
       $(document).ready(function(){
       converter_init();
